<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_classification"
        android:icon="@drawable/category_selector"
        android:title="@string/title_classification"/>

    <item
        android:id="@+id/navigation_lookout"
        android:icon="@drawable/wangjie_selector"
        android:title=""/>

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/cart_selector"
        android:title="@string/title_shopping_cart"/>

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/me_selector"
        android:title="@string/title_me"/>
</menu>