<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hws.hwsappandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_classification"
        android:name="com.hws.hwsappandroid.ui.classification.ClassificationFragment"
        android:label="@string/title_classification"
        tools:layout="@layout/fragment_classification" />

    <fragment
        android:id="@+id/navigation_lookout"
        android:name="com.hws.hwsappandroid.ui.lookout.LookoutFragment"
        android:label="@string/title_lookout"
        tools:layout="@layout/fragment_lookout" />

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.hws.hwsappandroid.ui.cart.ShoppingCartFragment"
        android:label="@string/title_shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.hws.hwsappandroid.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>