<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="172dp"
    android:background="@color/white"
    app:cardCornerRadius="9dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:text="@string/kind_tips"/>
        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF999999"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:text="@string/want_to_delete_change_address"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="19dp">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="28dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_gray_18"
            android:text="@string/cancel"/>
        <View
            android:layout_width="20dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_red_18"
            android:layout_marginEnd="28dp"
            android:textColor="@color/white"
            android:text="@string/confirm_deletion"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>