<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="295dp"
    android:background="@drawable/bottom_sheet_top_round_white">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="64dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:background="@color/transparent"
            android:textColor="@color/text_soft"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textStyle="normal"/>
        <TextView
            android:id="@+id/toolbar_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/text_title"
            android:text="@string/birthday"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="64dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent"
            android:textColor="@color/price_text"
            android:text="@string/determine"
            android:textSize="16sp"
            android:textStyle="normal"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:background="@color/divider"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:theme="@style/AppTheme.Picker"
        android:layout_gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>