<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/take_a_picture"
            android:textColor="@color/text_hard"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/from_gallery"
            android:textColor="@color/text_hard"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/camera" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/cancel"
            android:textColor="@color/text_hard"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/album" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>